--- a/projects.html
+++ b/projects.html
@@ -33,10 +33,10 @@
               <div class="col">
                 <div class="card h-100">
                   <div class="card-body">
-                    <h5 class="card-title">Portfolio Website</h5>
-                    <p class="card-text">Responsive personal site built with React/Tailwind (or this Java version!).</p>
-                    <a class="btn btn-primary" href="#" target="_blank">Live Demo</a>
-                    <a class="btn btn-outline-secondary" href="#" target="_blank">Code</a>
+                    <h5 class="card-title">Bg colour change</h5>
+                    <p class="card-text">Bg colour changes</p>
+                    <a class="btn btn-primary" href="bgcol2.netlify.app" target="_blank">Live Demo</a>
+                    <a class="btn btn-outline-secondary" href="https://github.com/pritiparnakar/java-project" target="_blank">Code</a>
                   </div>
                 </div>
               </div>
@@ -45,8 +45,8 @@
                   <div class="card-body">
                     <h5 class="card-title">Currency Converter </h5>
                     <p class="card-text">Converts Currency Value</p>
-                    <a class="btn btn-primary" href="https://github.com/pritiparnakar/react-prac" target="_blank">Live Demo</a>
-                    <a class="btn btn-outline-secondary" href="#" target="_blank">Code</a>
+                    <a class="btn btn-primary" href="currencycon1.netlify.app" target="_blank">Live Demo</a>
+                    <a class="btn btn-outline-secondary" href="https://github.com/pritiparnakar/react-prac" target="_blank">Code</a>
                   </div>
                 </div>
               </div>
@@ -56,7 +56,7 @@
                     <h5 class="card-title">AI Anomaly Detection</h5>
                     <p class="card-text">ML model that flags unusual network traffic patterns.</p>
                     <a class="btn btn-primary" href="#" target="_blank">Ongoing</a>
-                    <a class="btn btn-outline-secondary" href="#" target="_blank">Code</a>
+                    <a class="btn btn-outline-secondary" href="#" target="_blank">In progress</a>
                   </div>
                 </div>
               </div>
